# agentic-workflow-lab

./: .gitignore  README.md
.github/: custom-instructions.md
.github/agents/: document.agent.md  plan.agent.md  tdd.agent.md
.github/instructions/: testing-guidelines.instructions.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PRODUCT.md  UPSTREAM_SYNC.md  ci-job-failure-docs.md  task-manager-implementation-plan.md
issues/: CI_Build_and_Test_Failures.md  ci-job-failure-gcov.md
labs/: step-01-explore-context.md  step-02-add-custom-instructions.md  step-03-create-implementation-plan.md  step-04-implement-using-agent-mode.md  step-05-build-and-test.md  step-06-add-document-agent.md  step-07-commit-and-pr.md  step-08-copilot-reviewer.md  step-09-merge-pr-main.md  step-10-use-mcp-server.md  step-11-assign-coding-agent.md
scripts/: README.md  setup-repository.sh  sync-upstream.sh
task-manager-cli/: CMakeLists.txt  README.md  task-manager-cli
task-manager-cli/_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  task-manager-tests[1]_include.cmake  task-manager-tests[1]_tests.cmake
task-manager-cli/src/: cli.cpp  cli.h  error_logger.h  file_task_repository.cpp  file_task_repository.h  i_task_repository.h  main.cpp  repository_exceptions.h  task.cpp  task.h  task_manager.cpp  task_manager.h  task_repository.cpp  task_repository.h
task-manager-cli/tests/: mock_task_repository.h  test_cli.cpp  test_error_handling.cpp  test_integration.cpp  test_task.cpp  test_task_manager.cpp  test_task_repository.cpp
